--- a/index.html
+++ b/index.html
@@ -171,9 +171,14 @@
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Le feste</h4>
                 <p class="mb-0 text-white-50">
-                  Consectetur esse consequat exercitation magna occaecat. Labore veniam sunt incididunt officia elit ut
-                  anim cillum laborum cupidatat minim sit ea deserunt. In ut irure labore minim amet commodo cillum.
-                  Sunt in exercitation mollit id excepteur magna eu adipisicing id eu excepteur nulla pariatur.
+                  In questa storia, nonostante la veneranda età dei due protagonisti entrambi si divertivano 
+                  ancora con i piaceri giovanili delle feste...
+                  <br>
+                  Questa fu solo una delle molteplici manifestazioni di amore che i due elargivano al vasto 
+                  pubblico che li circondava e li invidiava per il loro carisma e la loro gioiosità nel vivere e nel divertirsi...
+                  <br>
+                  Di lì a poco però i fidanzatini dovettero rinunciare a questi svaghi plebei per dilettarsi 
+                  in qualcosa che sia più adatto alla loro ormai molto avanzata età...
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0" />
               </div>
@@ -182,7 +187,7 @@
         </div>
       </div>
 
-      <!-- WIP Quarantena -->
+      <!-- Quarantena -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6" style="background: var(--black)">
           <img class="img-fluid" src="assets/img/la-quarantena.jpeg" alt="" />
@@ -193,9 +198,12 @@
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">La quarantena </h4>
                 <p class="mb-0 text-white-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dignissimos optio reprehenderit!
-                  Quos necessitatibus dolore eveniet cumque impedit voluptate commodi harum, dolor doloremque cum nobis
-                  sequi rem eum? Tempora, ex!
+                  Anche in questa storia, come nel romanzo Manzoniano, si diffuse una malattia molto contagiosa 
+                  che causò un periodo di reclusione forzata, il quale mise a dura prova la relazione...
+                  <br>
+                  La coppia, divisa fisicamente, ma unita spiritualmente, riuscì a resiste tre interminabili e molto duri 
+                  mesi dilettandosi in varie comunicazioni telefoniche audio-visive con le quali cercarono, almeno idealmente, 
+                  di annullare la distanza che si interponeva tra di loro, la quale non pervetteva di essere l'affetto primario l'uno dell'altra...
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0" />
               </div>
@@ -204,7 +212,7 @@
         </div>
       </div>
 
-      <!-- WIP Convivenza -->
+      <!-- Convivenza -->
       <div class="row justify-content-center no-gutters mb-4 mb-lg-5">
         <div class="col-lg-6">
           <img class="img-fluid" src="assets/img/la-convivenza.jpeg" alt="" />
@@ -215,9 +223,13 @@
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">La convivenza</h4>
                 <p class="mb-0 text-white-50">
-                  Consectetur esse consequat exercitation magna occaecat. Labore veniam sunt incididunt officia elit ut
-                  anim cillum laborum cupidatat minim sit ea deserunt. In ut irure labore minim amet commodo cillum.
-                  Sunt in exercitation mollit id excepteur magna eu adipisicing id eu excepteur nulla pariatur.
+                  Passato il momento di reclusione, in contrapposizione alla sofferenza per la lontanza
+                  posta precedentemente sulla starda dei due congiunti, la provvidenza offrì 
+                  un momento in cui i due potessero ritagliare insieme il loro piccolo angolo di paradiso, 
+                  in quella che oramai era una vita all'insegna di regole molto lige e restrittive a causa del virus...
+                  <br>
+                  I due con incredibile responsabilità riuscirono a conciliare lo studio di lei e il lavoro di lui, 
+                  in un incredibile convivenza eddomadària, celebrativa del loro amore... 
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0" />
               </div>
@@ -229,7 +241,7 @@
     </div>
   </section>
 
-  <!-- Signup-->
+  <!-- Continue... -->
   <section class="signup-section" id="signup">
     <div class="container">
       <div class="row">
@@ -241,13 +253,6 @@
           <h3 class="text-white mb-5">
             Se vuoi vedere delle belle storie scegli un'album qui sotto
           </h3>
-          <!-- <form class="form-inline d-flex">
-            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email"
-              placeholder="Enter email address..." />
-            <a href="./WIP-page/index.html">
-              <button class="btn btn-primary mx-auto" type="button">Subscribe</button>
-            </a>
-          </form> -->
         </div>
       </div>
     </div>
