--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   pubblico che li circondava e li invidiava per il loro carisma e la loro gioiosità nel vivere e nel divertirsi...
                   <br>
                   Di lì a poco però i fidanzatini dovettero rinunciare a questi svaghi plebei per dilettarsi 
-                  in qualcosa che sia più adatto alla loro ormai molto avanzata età...
+                  in qualcosa che fosse più adatto alla loro ormai molto avanzata età...
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0" />
               </div>
@@ -203,7 +203,7 @@
                   <br>
                   La coppia, divisa fisicamente, ma unita spiritualmente, riuscì a resiste tre interminabili e molto duri 
                   mesi dilettandosi in varie comunicazioni telefoniche audio-visive con le quali cercarono, almeno idealmente, 
-                  di annullare la distanza che si interponeva tra di loro, la quale non pervetteva di essere l'affetto primario l'uno dell'altra...
+                  di annullare la distanza che si interponeva tra di loro, la quale non permetteva di essere l'affetto primario l'uno dell'altra...
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0" />
               </div>
