--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <h4 class="text-white">The FB's House</h4>
                 <p class="mb-0 text-white-50">
                   Durante la stessa estate dopo la partenza e il ritorno dell'amata per la prima volta il giovane
-                  ebbe la possibilità di fare visita alla di colei dimora, dove i ragazzi sugellarrono il loro amore
+                  ebbe la possibilità di fare visita alla di colei dimora, dove i ragazzi sugellarono il loro amore
                   grazie ad alcuni giorni insieme...
                   <br>
                   Qui i due ebbero un primo assaggio di ciò che potea essere una convivenza che va oltre un semplice
