add link to old-site page

--- a/album.html
+++ b/album.html
@@ -64,7 +64,7 @@
           </a>
         </div>
 
-        <div id="descriptions-1" class="opaca">
+        <div id="descriptions-1" class="opaca mx-auto">
           <h5>Il nostro primo(secondo) bacio</h5>
           <p>
             Che primo bacio pazzesco al compleanno della sveva
@@ -95,7 +95,7 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-        <div id="descriptions-2" class="opaca">
+        <div id="descriptions-2" class="opaca mx-auto">
           <h5>Cazzetto</h5>
           <p>
             Come al solito parli male di ABjr... Stronza....
