--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
   <section class="contact-section bg-black">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col"> <!---md-4 mb-3 mb-md-0">--->
           <div class="card py-4 h-100">
-            <a href=".WIP-page/index.html?album=1">
+            <a href="./album.html"><!---".WIP-page/index.html?album=1">--->
               <div class="card-body text-center">
                 <i class="fas fa-images text-primary mb-2"></i>
-                <a href="WIP-page/index.html?album=1">
+                <a href="./album.html"><!---WIP-page/index.html?album=1">--->
                   <h4 class="text-uppercase m-0">Album 1</h4>
                 </a>
                 <hr class="my-4" />
@@ -276,7 +276,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 mb-3 mb-md-0">
+<!---        <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <a href="WIP-page/index.html?album=2">
               <div class="card-body text-center">
@@ -299,6 +299,7 @@
               <hr class="my-4" />
             </div>
           </div>
+--->
         </div>
       </div>
       <div class="social d-flex justify-content-center">
