--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Le feste</h4>
                 <p class="mb-0 text-white-50">
-                  In questa storia, nonostante la veneranda età dei due protagonisti entrambi si divertivano 
+                  In questa storia, nonostante la veneranda età dei due protagonisti entrambi si divertivano
                   ancora con i piaceri giovanili delle feste...
                   <br>
-                  Questa fu solo una delle molteplici manifestazioni di amore che i due elargivano al vasto 
+                  Questa fu solo una delle molteplici manifestazioni di amore che i due elargivano al vasto
                   pubblico che li circondava e li invidiava per il loro carisma e la loro gioiosità nel vivere e nel divertirsi...
                   <br>
-                  Di lì a poco però i fidanzatini dovettero rinunciare a questi svaghi plebei per dilettarsi 
+                  Di lì a poco però i fidanzatini dovettero rinunciare a questi svaghi plebei per dilettarsi
                   in qualcosa che fosse più adatto alla loro ormai molto avanzata età...
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0" />
@@ -198,11 +198,11 @@
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">La quarantena </h4>
                 <p class="mb-0 text-white-50">
-                  Anche in questa storia, come nel romanzo Manzoniano, si diffuse una malattia molto contagiosa 
+                  Anche in questa storia, come nel romanzo Manzoniano, si diffuse una malattia molto contagiosa
                   che causò un periodo di reclusione forzata, il quale mise a dura prova la relazione...
                   <br>
-                  La coppia, divisa fisicamente, ma unita spiritualmente, riuscì a resiste tre interminabili e molto duri 
-                  mesi dilettandosi in varie comunicazioni telefoniche audio-visive con le quali cercarono, almeno idealmente, 
+                  La coppia, divisa fisicamente, ma unita spiritualmente, riuscì a resiste tre interminabili e molto duri
+                  mesi dilettandosi in varie comunicazioni telefoniche audio-visive con le quali cercarono, almeno idealmente,
                   di annullare la distanza che si interponeva tra di loro, la quale non permetteva di essere l'affetto primario l'uno dell'altra...
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0" />
@@ -224,12 +224,12 @@
                 <h4 class="text-white">La convivenza</h4>
                 <p class="mb-0 text-white-50">
                   Passato il momento di reclusione, in contrapposizione alla sofferenza per la lontanza
-                  posta precedentemente sulla starda dei due congiunti, la provvidenza offrì 
-                  un momento in cui i due potessero ritagliare insieme il loro piccolo angolo di paradiso, 
+                  posta precedentemente sulla starda dei due congiunti, la provvidenza offrì
+                  un momento in cui i due potessero ritagliare insieme il loro piccolo angolo di paradiso,
                   in quella che oramai era una vita all'insegna di regole molto lige e restrittive a causa del virus...
                   <br>
-                  I due con incredibile responsabilità riuscirono a conciliare lo studio di lei e il lavoro di lui, 
-                  in un incredibile convivenza eddomadària, celebrativa del loro amore... 
+                  I due con incredibile responsabilità riuscirono a conciliare lo studio di lei e il lavoro di lui,
+                  in un incredibile convivenza eddomadària, celebrativa del loro amore...
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0" />
               </div>
@@ -264,10 +264,12 @@
       <div class="row">
         <div class="col"> <!---md-4 mb-3 mb-md-0">--->
           <div class="card py-4 h-100">
-            <a href="./album.html"><!---".WIP-page/index.html?album=1">--->
+            <a href="./old_site/index.html">
+              <!---".WIP-page/index.html?album=1">--->
               <div class="card-body text-center">
                 <i class="fas fa-images text-primary mb-2"></i>
-                <a href="./album.html"><!---WIP-page/index.html?album=1">--->
+                <a href="./old_site/index.html">
+                  <!---WIP-page/index.html?album=1">--->
                   <h4 class="text-uppercase m-0">Album 1</h4>
                 </a>
                 <hr class="my-4" />
