--- a/old_site/index.html
+++ b/old_site/index.html
@@ -18,9 +18,9 @@
   </head>
 
   <body class="text-center">
-      <div id="box" onclick="zebbi()">
-        <h1 class="one rounded"> SPACCHETTA <br>IL TUO REGALO! </h1>
-      </div>
+    <div id="box" onclick="zebbi()">
+      <h1 class="one rounded"> SPACCHETTA <br>IL TUO REGALO! </h1>
+    </div>
 
     <main id="tutto" hidden>
       <section class="vertical-align-center--parent">
@@ -33,7 +33,19 @@
       </section>
 
       <section>
-        <div id="carosello-1" class="fade w-75 mx-auto text-center">
+        <div id="carousel-0-loader" class="sk-cube-grid">
+          <div class="sk-cube sk-cube1"></div>
+          <div class="sk-cube sk-cube2"></div>
+          <div class="sk-cube sk-cube3"></div>
+          <div class="sk-cube sk-cube4"></div>
+          <div class="sk-cube sk-cube5"></div>
+          <div class="sk-cube sk-cube6"></div>
+          <div class="sk-cube sk-cube7"></div>
+          <div class="sk-cube sk-cube8"></div>
+          <div class="sk-cube sk-cube9"></div>
+        </div>
+
+        <div id="carosello-1" class="fade w-75 mx-auto text-center" hidden>
           <h2 class="section-title"> Io e te insieme </h2>
           <div class="container">
             <div class="row center no-gutters">
@@ -61,7 +73,19 @@
       </section>
 
       <section>
-        <div id="carosello-2" class="fade w-75 mx-auto text-center">
+        <div id="carousel-1-loader" class="sk-cube-grid">
+          <div class="sk-cube sk-cube1"></div>
+          <div class="sk-cube sk-cube2"></div>
+          <div class="sk-cube sk-cube3"></div>
+          <div class="sk-cube sk-cube4"></div>
+          <div class="sk-cube sk-cube5"></div>
+          <div class="sk-cube sk-cube6"></div>
+          <div class="sk-cube sk-cube7"></div>
+          <div class="sk-cube sk-cube8"></div>
+          <div class="sk-cube sk-cube9"></div>
+        </div>
+
+        <div id="carosello-2" class="fade w-75 mx-auto text-center" hidden>
           <h2 class="section-title"> Tu incazzata con me </h2>
 
           <div class="container">
@@ -92,21 +116,33 @@
       </section>
 
       <section>
-        <div id="baci" class="container-fluid fade w-75 mx-auto text-center">
+        <div id="baci-loader" class="sk-cube-grid">
+          <div class="sk-cube sk-cube1"></div>
+          <div class="sk-cube sk-cube2"></div>
+          <div class="sk-cube sk-cube3"></div>
+          <div class="sk-cube sk-cube4"></div>
+          <div class="sk-cube sk-cube5"></div>
+          <div class="sk-cube sk-cube6"></div>
+          <div class="sk-cube sk-cube7"></div>
+          <div class="sk-cube sk-cube8"></div>
+          <div class="sk-cube sk-cube9"></div>
+        </div>
+
+        <div id="baci" class="container-fluid fade w-75 mx-auto text-center" hidden>
           <h2 class="section-title"> I nostri baci </h2>
 
           <div class="row center no-gutters">
             <div id="bacio-11" class="col-md-6 col-sm-12 col-xl-6" >
               <h2 class=" text-white title-baci"> Il nostro primo bacio...  😘</h2>
               <br>
-              <img id="img-bacio-1" src="assets/photos/img1.jpg" alt="..." class="img-fluid bordi rounded">
+              <img id="img-bacio-1" src="assets/photos/img1.jpeg" alt="..." class="img-fluid bordi rounded">
             </div>
 
             <div id="bacio-22" class="col-md-6 col-sm-12 col-xl-6">
               <h2 class="text-white title-baci"> ...Il nostro bacio ora </h2>
               <h3 class="text-white-50"> Nota, com'è cambiata la felicità 😋</h3>
               <br>
-              <img id="img-bacio-2" src="assets/photos/img33.jpg" alt="..." class="img-fluid bordi rounded">
+              <img id="img-bacio-2" src="assets/photos/img33.jpeg" alt="..." class="img-fluid bordi rounded">
             </div>
           </div>
         </div>
